# smolvla-ws

./: .gitmodules  README.md  run.sh
data_atsume/: custom_record.py  data-format-v1.md  data-format.md  gripper_test.py  move_simple_minimal.py  pyproject.toml  simple_record.py  test_realsense.py
data_atsume/realman_lib/: robotic_arm.py
