[project]
name = "data-atsume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.14.0",
    "opencv-python>=4.12.0.88",
    "pyarrow>=21.0.0",
    "pyrealsense2>=2.56.5.9235",
    "pyrobotiqgripper>=1.0.1",
    "rerun-sdk>=0.24.1",
    "scipy>=1.15.3",
]
